Add cyclic example
