# packages/core/test/test-util/test-services/openapi/test-service/open-api.json
@@ -804,6 +804,25 @@
             }
           }
         }
+      },
+      "CyclicParent": {
+        "type": "object",
+        "properties": {
+          "children": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CyclicChild"
+            }
+          }
+        }
+      },
+      "CyclicChild": {
+        "type": "object",
+        "properties": {
+          "parent": {
+            "$ref": "#/components/schemas/CyclicParent"
+          }
+        }
       }
     }
   }
