# test-packages/test-services/openapi/test-service/schema/cyclic-child.ts
@@ -3,5 +3,7 @@
  *
  * This is a generated file powered by the SAP Cloud SDK for JavaScript.
  */
-    import type { SimpleTestEntity } from './simple-test-entity';
-    export type OtherSimpleTestEntity = SimpleTestEntity;
+    import type { CyclicParent } from './cyclic-parent';
+    export type CyclicChild = {
+      'parent'?: CyclicParent;
+    } | Record<string, any>;
