# test-packages/test-services/openapi/test-service/schema/index.js
@@ -19,4 +19,6 @@ __exportStar(require("./test-entity"), exports);
 __exportStar(require("./simple-test-entity"), exports);
 __exportStar(require("./other-simple-test-entity"), exports);
 __exportStar(require("./complex-test-entity"), exports);
+__exportStar(require("./cyclic-parent"), exports);
+__exportStar(require("./cyclic-child"), exports);
 //# sourceMappingURL=index.js.map
