# test-packages/test-services/openapi/test-service/schema/index.ts
@@ -7,3 +7,5 @@
     export * from './simple-test-entity';
     export * from './other-simple-test-entity';
     export * from './complex-test-entity';
+    export * from './cyclic-parent';
+    export * from './cyclic-child';
